Adding Lucid and EccoStats to the CmakeLists

--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -44,6 +44,7 @@ add_subdirectory (IpsTs2NetCDF)
 add_subdirectory (IpsTsPrint)
 add_subdirectory (IpsTsSim)
 add_subdirectory (Iq2Dsr)
+add_subdirectory (Lucid)
 add_subdirectory (Mdv2Vad)
 add_subdirectory (MdvFold)
 add_subdirectory (MdvRadarShear)
