Copying default Makefile to makefile.lrose_core for apps

--- a/codebase/apps/radar/src/_makefiles/makefile.lrose-core
+++ b/codebase/apps/radar/src/_makefiles/makefile.lrose-core
@@ -26,6 +26,7 @@ SUB_DIRS = \
 	DsrMerge \
 	DualDopplerLobes \
 	Ecco \
+	EccoStats \
 	HawkEye \
 	HawkEdit \
 	HcrTempRxGain \
@@ -40,6 +41,7 @@ SUB_DIRS = \
 	IpsTsSim \
 	Iq2Dsr \
 	KinGin2Ncf \
+	Lucid \
 	Mdv2Vad \
 	MdvFold \
 	MdvRadarShear \
