apps/radar/TsUdp2Fmq - add a print

--- a/codebase/apps/radar/src/CMakeLists.txt
+++ b/codebase/apps/radar/src/CMakeLists.txt
@@ -88,6 +88,7 @@ add_subdirectory (TsStatusMonitor)
 add_subdirectory (TsTcp2File)
 add_subdirectory (TsTcp2Fmq)
 add_subdirectory (TsTimeFix)
+add_subdirectory (TsUdp2Fmq)
 add_subdirectory (UfRadarPrint)
 add_subdirectory (VertCompute)
 add_subdirectory (ZdrCalSimHv)
