apps/radar/Pid2Grid -> CartPidQpe

--- a/codebase/apps/Radx/src/Makefile
+++ b/codebase/apps/Radx/src/Makefile
@@ -8,6 +8,7 @@ TARGETS = $(GENERAL_TARGETS) $(INSTALL_TARGETS)
 
 SUB_DIRS = \
 	Ascii2Radx \
+	CartPidQpe \
 	Dsr2Radx \
 	FixCfradialPaths \
 	FixFieldVals \
