apps/radar/Pid2Grid -> CartPidQpe

--- a/codebase/apps/Radx/src/CMakeLists.txt
+++ b/codebase/apps/Radx/src/CMakeLists.txt
@@ -13,6 +13,7 @@ project (lrose-core)
 # subdirectories
 
 add_subdirectory (Ascii2Radx)
+add_subdirectory (CartPidQpe)
 add_subdirectory (Dsr2Radx)
 add_subdirectory (FixCfradialPaths)
 add_subdirectory (FixFieldVals)
