--- a/codebase/apps/refractt/src/Makefile
+++ b/codebase/apps/refractt/src/Makefile
@@ -14,6 +14,7 @@ SUB_DIRS = \
 	DsrAddSnr \
 	MdvAddSnr \
 	PhaseDiff \
+	RefractColorScales \
 	RefractCalib \
 	RefractCompute \
 	RefractParams2Tdrp \
