--- a/codebase/apps/refractt/src/CMakeLists.txt
+++ b/codebase/apps/refractt/src/CMakeLists.txt
@@ -19,6 +19,7 @@ add_subdirectory (CleanupRvp8Data)
 add_subdirectory (DsrAddSnr)
 add_subdirectory (MdvAddSnr)
 add_subdirectory (PhaseDiff)
+add_subdirectory (RefractColorScales)
 add_subdirectory (RefractCalib)
 add_subdirectory (RefractCompute)
 add_subdirectory (RefractParams2Tdrp)
