apps/refract/CalcNexrad -> apps/refract/NexradA1ToRefract

--- a/codebase/apps/refractt/src/CMakeLists.txt
+++ b/codebase/apps/refractt/src/CMakeLists.txt
@@ -13,11 +13,11 @@ project (lrose-core)
 # subdirectories
 
 add_subdirectory (CalcMoisture)
-add_subdirectory (CalcNexrad)
 add_subdirectory (Chill2netCDFSweep)
 add_subdirectory (CleanupRvp8Data)
 add_subdirectory (DsrAddSnr)
 add_subdirectory (MdvAddSnr)
+add_subdirectory (NexradA1ToRefract)
 add_subdirectory (PhaseDiff)
 add_subdirectory (RefractColorScales)
 add_subdirectory (RefractCalib)
